examples/errors/cons2.spl
main() {
    var a = [].snd;
    return;
}